--- a/kubernetes/components/common/sops/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/sops/cluster-secrets.sops.yaml
@@ -3,20 +3,20 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:8TQ38KBn/6GXDg==,iv:LZViTPBIHYWxAjoXpVVMIYjwTrCpYU/AkmhKL56istE=,tag:Xrv3WSv7k2o6edN4KExh5g==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:Yp3vVSXxxq5Sng==,iv:PCGbZFBOOOv6dE1NYnbUtDr9vFWYGnpq033tJzPA3g8=,tag:dC0Vi7dE7k1PWMZ0b9YbIQ==,type:str]
 sops:
   age:
     - recipient: age1u3vaz5emmapah38cuwsqdwkus55edvgs648naea0mylmeq0nl9espv3960
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtV1E2QmJubmpjZzlSZGcw
-        c0ZTcCtGWThVNVRpdmRpZitONktqZjMvTkUwCldHSzNGNkRxbGpHRkUzY1RCa2M2
-        eUFucGZvSkxaeU9EYjkreFRGdjJYZkUKLS0tIHRJSjVTeWpaSHJCd1cxUDJKU0d4
-        bWpaZTlGNEZaSXdOMmxEbDN0bnlMZ0kK9jeTpRKAZKN3WyAHLrbSEyVDIuDralwr
-        BiX1uz+C4IgpVStncWWJ1YJpr0FDEERvidnGNMSEDv2h8cXUMMtjsw==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEeU5FOUJUWkNybVc1S0p0
+        cDVOU2k3anpPY2I1ZStPcTBnZEFHeCtPL0U0CllxUjFRYnZSaFZ2QnhuV2hXa0dN
+        TGJ3NlU3M1liN2crcndTRGlCVXBvc1kKLS0tIDczSlJFUVAzbTJBc21zWFg1dFU3
+        TldmYjYwcEN0b2NkMDVMR050Ry8rejgKBHT2spfuR84OptAq18SDBZBH/MVOIzJ3
+        zC1wfEhPYN55WHqTxkvp9mTn1PtT9vzJOwdU8LVSg1hdwErsTlSHbA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-07-11T22:05:08Z"
-  mac: ENC[AES256_GCM,data:mIT5Szp9Qn65sAJU71oNmlBTtMk6Ms32P2p/qankumihkiDRfGKyyqjE+Z59ySO6hTAZ3KT1nnArIEhYg157o6chQPGkexb97F4PJOEGJKGsDcJyepAyThEylQhk8vtLePvtizEp/NEhGzU/t4O/BmXf3vLFCmtvso9x6eoHVes=,iv:ZfOfjznP+r6Pt1E1ZaqVGoe4lZTVnv2AB0Ql5ZE7GKY=,tag:UfVEgSWPM5GGiFZNrsRKdg==,type:str]
+  lastmodified: "2025-07-11T22:11:05Z"
+  mac: ENC[AES256_GCM,data:UrnVrCpoqI9z61LenzRpOFwqzMonWWFXLIxLCYwKcSj+WIJRWETVt1Zovj1WlUPWnj6z3plfMRWYFdyHtKriNeKA/Y8/JKKuaNfBg/22rJAXZyeZZepx1HydW1iPChg/bMKrki8ffWVb1EKi8BbmKGqHkhZkHMb2gVIPXMn7imo=,iv:cYkqh0w4Utzq1WLmLrbBy9ZSyZi9aW25woxXewtIYyM=,tag:FZOh4PZ+revcA79Uq4Eq3w==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.10.2
