chore: add talhelper encrypted secret :lock:

--- a/kubernetes/components/common/sops/cluster-secrets.sops.yaml
+++ b/kubernetes/components/common/sops/cluster-secrets.sops.yaml
@@ -3,20 +3,20 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:Yp3vVSXxxq5Sng==,iv:PCGbZFBOOOv6dE1NYnbUtDr9vFWYGnpq033tJzPA3g8=,tag:dC0Vi7dE7k1PWMZ0b9YbIQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:wITCNxaBVjNEig==,iv:Y0yZBdfsXORx6xr4C54upZgKyLo4jpGczV7f+EauJrQ=,tag:kkEbNdCV7Kqg5bHEftm0qw==,type:str]
 sops:
   age:
     - recipient: age1u3vaz5emmapah38cuwsqdwkus55edvgs648naea0mylmeq0nl9espv3960
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEeU5FOUJUWkNybVc1S0p0
-        cDVOU2k3anpPY2I1ZStPcTBnZEFHeCtPL0U0CllxUjFRYnZSaFZ2QnhuV2hXa0dN
-        TGJ3NlU3M1liN2crcndTRGlCVXBvc1kKLS0tIDczSlJFUVAzbTJBc21zWFg1dFU3
-        TldmYjYwcEN0b2NkMDVMR050Ry8rejgKBHT2spfuR84OptAq18SDBZBH/MVOIzJ3
-        zC1wfEhPYN55WHqTxkvp9mTn1PtT9vzJOwdU8LVSg1hdwErsTlSHbA==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUS3NEc2VTS0dTUnBIYWxn
+        c1FldnpkcjJGYmg0VUdrZE5QMEIwSlU2RlVRCjhLWGFIU2NHYkozSDNWM2xZSHhM
+        WkpkaHMxblIyOXoraWFIMW4vZDltRmsKLS0tIFZlaXZ2UXNUK2wvbGVRTi9rUUR5
+        UmZxMXE0RHJFVHB4MUt1WDF4dDNkNHcKhqvOhYsCbrjXtfrjgyScyaIrVcJk6vDZ
+        6nzYfpiO4yc2PIXZdh9lTCR+PgiFharIedJAA/P6UwgD/MPy9BzWNQ==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-07-11T22:11:05Z"
-  mac: ENC[AES256_GCM,data:UrnVrCpoqI9z61LenzRpOFwqzMonWWFXLIxLCYwKcSj+WIJRWETVt1Zovj1WlUPWnj6z3plfMRWYFdyHtKriNeKA/Y8/JKKuaNfBg/22rJAXZyeZZepx1HydW1iPChg/bMKrki8ffWVb1EKi8BbmKGqHkhZkHMb2gVIPXMn7imo=,iv:cYkqh0w4Utzq1WLmLrbBy9ZSyZi9aW25woxXewtIYyM=,tag:FZOh4PZ+revcA79Uq4Eq3w==,type:str]
+  lastmodified: "2025-07-11T22:21:28Z"
+  mac: ENC[AES256_GCM,data:QG5pnM9SdXsYOlkEXrtyjoJpRJHdkRMAnFlh7VIgn2lJQ25kXK7t9LjiiUeGEmdxUdRuVrSxRSPyO9Ff+Fi9mrxUoxOnhgEYLKLRNqD0qYQCLXWhPIefPSfoT8M7HDI6sYjT24t9rS4Dia9wJD0Kf8ZYgz32+ujb4cwXGaQha3g=,iv:TN5suW2l8eY037wxDplsViC27GRqJZ6rK9ybUkpJIJI=,tag:ndIu0a++VWd5QCbtaciiVw==,type:str]
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
   version: 3.10.2
